Added llvm build include directory to soaaps's CMakeLists.txt, as it contains the llvm/include/support/DataTypes.h file needed by soaap. Also, fixed a seg fault in the soaap llvm pass that was occurring when the file being analysed didn't contain a main method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,10 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_BINARY_DIR}/share/llvm/cmake"
 include(LLVMConfig)
 include(AddLLVM)
 
+add_definitions( ${LLVM_DEFINITIONS} )
+
 include_directories( ${LLVM_SOURCE_DIR}/include )
+include_directories( ${LLVM_BINARY_DIR}/include )
 include_directories( ${VALGRIND_BINARY_DIR}/include )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
