Two new passes to a) insert call edge profiling instrumentation (-insert-call-edge-profiling) and b) print a pretty DOT graph from an llvmprof.out file (-dot-dynamic-callgraph)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,13 @@ include(AddLLVM)
 add_definitions( ${LLVM_DEFINITIONS} )
 
 include_directories( ${LLVM_SOURCE_DIR}/include )
+include_directories( ${LLVM_SOURCE_DIR}/lib )
+include_directories( ${LLVM_SOURCE_DIR}/runtime/libprofile )
 include_directories( ${LLVM_BINARY_DIR}/include )
 include_directories( ${VALGRIND_BINARY_DIR}/include )
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
-add_llvm_loadable_module(soaap SoaapPass.cpp soaap_valgrind.c)
+add_llvm_loadable_module(libcep CallEdgeProfiling/CallEdgeProfiling.cpp CallEdgeProfiling/CallEdgeProfiling.c)
+add_library(cep_rt SHARED CallEdgeProfiling/CallEdgeProfiling.c)
+add_llvm_loadable_module(libsoaap SoaapPass/SoaapPass.cpp SoaapPass/soaap_valgrind.c)
+add_llvm_loadable_module(libdotdyncg DOTDynCG/DOTDynCG.cpp)
