Added -fno-rtti to CMAKE_CXX_FLAGS as clang/llvm does not use RTTI. Without this, running opt -load /path/to/soaap/pass -name-of-soaap-pass will complain of Undefined symbol _ZTIN4llvm10ModulePassE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
-set(CMAKE_CXX_FLAGS "-Wno-c++11-extensions")
+set(CMAKE_CXX_FLAGS "-Wno-c++11-extensions -fno-rtti")
 
 # incorporate CMake features provided by LLVM:
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_BINARY_DIR}/share/llvm/cmake")
