Fixed Soaap now to work when the definitions of the soaap_* functions are in the separate soaap_valgrind.c file and thus cannot be found by the LLVM pass. My changes adds declarations for these functions programatically during the LLVM pass. The second major change is decoupling the runtime functions from the LLVM pass - the runtime functions are now in a separate library libsoaap_rt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,6 @@ include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
 
 add_llvm_loadable_module(libcep CallEdgeProfiling/CallEdgeProfiling.cpp CallEdgeProfiling/CallEdgeProfiling.c)
 add_library(cep_rt SHARED CallEdgeProfiling/CallEdgeProfiling.c)
-add_llvm_loadable_module(libsoaap SoaapPass/SoaapPass.cpp SoaapPass/soaap_valgrind.c)
+add_llvm_loadable_module(libsoaap SoaapPass/SoaapPass.cpp)
+add_library(soaap_rt SHARED SoaapPass/soaap_valgrind.c)
 add_llvm_loadable_module(libdotdyncg DOTDynCG/DOTDynCG.cpp)
