--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_C_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
 set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang++)
 set(CMAKE_CXX_FLAGS "-fno-rtti -Wno-c++11-extensions")
 
