--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,17 +10,15 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_BINARY_DIR}/share/llvm/cmake"
 include(LLVMConfig)
 include(AddLLVM)
 
-add_definitions( ${LLVM_DEFINITIONS} )
+add_definitions(${LLVM_DEFINITIONS})
 
-include_directories( ${LLVM_SOURCE_DIR}/include )
-include_directories( ${LLVM_SOURCE_DIR}/lib )
-include_directories( ${LLVM_SOURCE_DIR}/runtime/libprofile )
-include_directories( ${LLVM_BINARY_DIR}/include )
-#include_directories( ${VALGRIND_BINARY_DIR}/include )
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include )
+include_directories(${LLVM_SOURCE_DIR}/include)
+include_directories(${LLVM_SOURCE_DIR}/lib)
+include_directories(${LLVM_SOURCE_DIR}/runtime/libprofile)
+include_directories(${LLVM_BINARY_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/SoaapPass)
 
-add_llvm_loadable_module(libcep CallEdgeProfiling/CallEdgeProfiling.cpp CallEdgeProfiling/CallEdgeProfiling.c)
-add_library(cep_rt SHARED CallEdgeProfiling/CallEdgeProfiling.c)
-add_llvm_loadable_module(libsoaap SoaapPass/SoaapPass.cpp)
-#add_library(soaap_rt SHARED SoaapPass/soaap_valgrind.c)
-add_llvm_loadable_module(libdotdyncg DOTDynCG/DOTDynCG.cpp)
+add_subdirectory(SoaapPass)
+add_subdirectory(CallEdgeProfiling)
+add_subdirectory(DOTDynCG)
