Extracted the sandbox-private analysis into its own classes and also added a utility class for sandbox-related utility functions.

--- a/SoaapPass/CMakeLists.txt
+++ b/SoaapPass/CMakeLists.txt
@@ -2,6 +2,8 @@ add_llvm_loadable_module(libsoaap
   SoaapPass.cpp
   Analysis/InfoFlow/AccessOriginAnalysis.cpp
   Analysis/InfoFlow/InfoFlowAnalysis.cpp
+  Analysis/InfoFlow/SandboxPrivateAnalysis.cpp
   Utils/LLVMAnalyses.cpp
   Utils/PrettyPrinters.cpp
+  Utils/SandboxUtils.cpp
 )
