Introduced a Sandbox class

--- a/SoaapPass/CMakeLists.txt
+++ b/SoaapPass/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_llvm_loadable_module(libsoaap
   SoaapPass.cpp
+  Common/Sandbox.cpp
   Analysis/InfoFlow/AccessOriginAnalysis.cpp
   Analysis/InfoFlow/InfoFlowAnalysis.cpp
   Analysis/InfoFlow/SandboxPrivateAnalysis.cpp
   Analysis/InfoFlow/ClassifiedAnalysis.cpp
   Analysis/InfoFlow/CapabilityAnalysis.cpp
+  Annotations/SandboxEntryPointAnnotations.cpp
   Utils/LLVMAnalyses.cpp
   Utils/PrettyPrinters.cpp
   Utils/SandboxUtils.cpp
