Removed unnecessary variable and also fixed paths in Makefile

--- a/mk/Makefile
+++ b/mk/Makefile
@@ -5,15 +5,15 @@ SOAAP_INCLUDE_PATH=/home/kg365/workspace/soaap/include
 LLVM_BUILD_DIR=/home/kg365/pool/llvm
 
 .bc.soaap:
-	opt -load $(SOAAP_BUILD_DIR)/SoaapPass/libsoaap.so -soaap -o /dev/null ${.IMPSRC}
+	opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap -o /dev/null ${.IMPSRC}
 
 .c.bc:
 	clang -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
 
 .bc.dyncg:
-	opt -load $(SOAAP_BUILD_DIR)/CallEdgeProfiling/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
+	opt -load $(SOAAP_BUILD_DIR)/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
 	llc -filetype=obj -o ${.IMPSRC:R}.po ${.IMPSRC:R}.pbc 
-	clang -L $(SOAAP_BUILD_DIR)/CallEdgeProfiling -L $(LLVM_BUILD_DIR)/lib -lcep_rt -lprofile_rt $(LDADD) -o ${.TARGET} ${.IMPSRC:R}.po
+	clang -L $(SOAAP_BUILD_DIR) -L $(LLVM_BUILD_DIR)/lib -lcep_rt -lprofile_rt $(LDADD) -o ${.TARGET} ${.IMPSRC:R}.po
 
 clean:
 	rm *.soaap *.dyncg *.pbc *.po *.bc
