Support for explicit sandbox creation points.
Added support for explicitly annotating persistent sandbox creation points. Currently, nothing is done with these annotations except recording the annotation(s) in the respective Sandbox instance.

Also implemented some formatting fixes for debug output.

--- a/mk/Makefile
+++ b/mk/Makefile
@@ -1,4 +1,4 @@
-.SUFFIXES: .c .bc .soaap .soaap_cg .soaap_perf
+.SUFFIXES: .c .bc .ll .soaap .soaap_cg .soaap_perf
 
 SOAAP_BUILD_DIR=/home/khilan/workspace_local/soaap_build
 SOAAP_INCLUDE_PATH=/home/khilan/workspace/soaap/include
@@ -6,6 +6,9 @@ LLVM_BUILD_DIR=/home/khilan/workspace_local/llvm_build
 
 .c.bc:
 	clang -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
+
+.bc.ll:
+	llvm-dis -o ${.TARGET} ${.IMPSRC}
 
 .bc.soaap:
 	opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
