Update Makefile to use LLVM_BUILD_DIR

--- a/mk/Makefile
+++ b/mk/Makefile
@@ -1,27 +1,27 @@
 .SUFFIXES: .c .bc .ll .soaap .soaap_cg .soaap_perf
 
-SOAAP_BUILD_DIR=/home/khilan/workspace_local/soaap_build
-SOAAP_INCLUDE_PATH=/home/khilan/workspace/soaap/include
-LLVM_BUILD_DIR=/home/khilan/workspace_local/llvm_build
+SOAAP_BUILD_DIR=/home/kg365/pool/soaap
+SOAAP_INCLUDE_PATH=/home/kg365/workspace/soaap/include
+LLVM_BUILD_DIR=/home/kg365/pool/llvm
 
 .c.bc:
-	clang -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/clang -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
 
 .bc.ll:
-	llvm-dis -o ${.TARGET} ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/llvm-dis -o ${.TARGET} ${.IMPSRC}
 
 .bc.soaap:
-	opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
 
 .bc.soaap_cg:
-	opt -load $(SOAAP_BUILD_DIR)/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
-	llc -filetype=obj -o ${.IMPSRC:R}.po ${.IMPSRC:R}.pbc 
-	clang -L $(SOAAP_BUILD_DIR) -L $(LLVM_BUILD_DIR)/lib -lcep_rt -lprofile_rt $(LDADD) -o ${.TARGET} ${.IMPSRC:R}.po
+	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
+	${LLVM_BUILD_DIR}/bin/llc -filetype=obj -o ${.IMPSRC:R}.po ${.IMPSRC:R}.pbc 
+	${LLVM_BUILD_DIR}/bin/clang -L $(SOAAP_BUILD_DIR) -L $(LLVM_BUILD_DIR)/lib -lcep_rt -lprofile_rt $(LDADD) -o ${.TARGET} ${.IMPSRC:R}.po
 
 .bc.soaap_perf:
-	opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap -soaap-emulate-performance ${SOAAP_FLAGS} -o ${.IMPSRC:R}.pbc ${.IMPSRC}
-	llc -filetype=obj -o ${.IMPSRC:R}.po ${.IMPSRC:R}.pbc 
-	clang -o ${.TARGET} ${.IMPSRC:R}.po
+	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap -soaap-emulate-performance ${SOAAP_FLAGS} -o ${.IMPSRC:R}.pbc ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/llc -filetype=obj -o ${.IMPSRC:R}.po ${.IMPSRC:R}.pbc 
+	${LLVM_BUILD_DIR}/bin/clang -o ${.TARGET} ${.IMPSRC:R}.po
 
 clean:
 	rm *.soaap *.soaap_cg *.soaap_perf *.pbc *.po *.bc
