Pass -analyze to opt for just soaap analysis.
If you don't specify -analyze to opt, the opt outputs the (processed) bitcode file. When doing a pure SOAAP analysis, this step is unnecessary and can save quite a bit of time if the input IR file is large, such as in the case of chrome.

--- a/mk/Makefile
+++ b/mk/Makefile
@@ -11,7 +11,7 @@ LLVM_BUILD_DIR=/home/kg365/pool/llvm
 	${LLVM_BUILD_DIR}/bin/llvm-dis -o ${.TARGET} ${.IMPSRC}
 
 .bc.soaap:
-	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/opt -analyze -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
 
 .bc.soaap_cg:
 	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
