Re-implementation of C++ Class Hierarchy Analysis.
This is a complete re-implementation of the c++ class hierarchy analysis to
allow support for classes defined in anonymous namespaces.

This also introduces a new pass called "soaap-insert-class-debug-info" which
s meant to be run on individual llvm IR files (i.e. pre-linking), and which
inserts debugging metadata for each virtual invocation storing a pointer to
the receiver's static class type's vtable.

NOTE: both -g and rtti need to be enabled for this to work.

So the workflow is:

1) Compile C++ files with -g and -frtti to LLVM IR
2) Run the -soaap-insert-class-debug-info pass on each individual LLVM IR file
3) Link IR files together
4) Run the -soaap analysis on the linked IR file

Having done (2), SOAAP (4) will be able to build a class hierarchy and map
virtual calls to all possible callees starting with the receiver object's
static class type.

--- a/mk/Makefile
+++ b/mk/Makefile
@@ -1,17 +1,29 @@
-.SUFFIXES: .c .bc .ll .soaap .soaap_cg .soaap_perf
+.SUFFIXES: .c .cc .dbc .dll .bc .ll .dbcsoaap .soaap .soaap_cg .soaap_perf
 
 SOAAP_BUILD_DIR=/home/kg365/pool/soaap
 SOAAP_INCLUDE_PATH=/home/kg365/workspace/soaap/include
 LLVM_BUILD_DIR=/home/kg365/pool/llvm
 
 .c.bc:
-	${LLVM_BUILD_DIR}/bin/clang -c -gline-tables-only -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
+	${LLVM_BUILD_DIR}/bin/clang -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
+
+.cc.bc:
+	${LLVM_BUILD_DIR}/bin/clang++ -c -g -I $(SOAAP_INCLUDE_PATH) -emit-llvm -o ${.TARGET} ${.IMPSRC}
 
 .bc.ll:
 	${LLVM_BUILD_DIR}/bin/llvm-dis -o ${.TARGET} ${.IMPSRC}
 
+.dbc.dll:
+	${LLVM_BUILD_DIR}/bin/llvm-dis -o ${.TARGET} ${.IMPSRC}
+
 .bc.soaap:
 	${LLVM_BUILD_DIR}/bin/opt -analyze -disable-verify -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
+
+.dbc.dbcsoaap:
+	${LLVM_BUILD_DIR}/bin/opt -analyze -disable-verify -load $(SOAAP_BUILD_DIR)/libsoaap.so -soaap ${SOAAP_FLAGS} -o /dev/null ${.IMPSRC}
+
+.bc.dbc:
+	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libclassdebuginfo.so -soaap-insert-class-debug-info ${SOAAP_FLAGS} -o ${.TARGET} ${.IMPSRC}
 
 .bc.soaap_cg:
 	${LLVM_BUILD_DIR}/bin/opt -load $(SOAAP_BUILD_DIR)/libcep.so -insert-call-edge-profiling -o ${.IMPSRC:R}.pbc ${.IMPSRC} 
@@ -24,4 +36,4 @@ LLVM_BUILD_DIR=/home/kg365/pool/llvm
 	${LLVM_BUILD_DIR}/bin/clang -o ${.TARGET} ${.IMPSRC:R}.po
 
 clean:
-	rm *.soaap *.soaap_cg *.soaap_perf *.pbc *.po *.bc
+	rm *.soaap *.soaap_cg *.soaap_perf *.pbc *.po *.bc *.dbc
