--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/SoaapPass)
 add_subdirectory(SoaapPass)
 add_subdirectory(CallEdgeProfiling)
 add_subdirectory(DOTDynCG)
+add_subdirectory(ClassDebugInfoPass)
