--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8)
 
 set(CMAKE_C_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
 set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang++)
-set(CMAKE_C_FLAGS "-fPIC")
-set(CMAKE_CXX_FLAGS "-fPIC -fno-rtti -Wno-c++11-extensions")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fno-rtti -Wno-c++11-extensions")
 
 set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 
