Use llvm-lit to run the contents of 'tests'.
SOAAP has a test suite, but some of it has fallen out of date. Add a ninja/make target to run the test suite ('ninja test') to encourage more testing. :)

There are limitations: we don't yet support XUnit-style XML export, so we can't register test results with Jenkins. Stay tuned...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(SoaapPass)
 add_subdirectory(CallEdgeProfiling)
 add_subdirectory(DOTDynCG)
 add_subdirectory(ClassDebugInfoPass)
+add_subdirectory(tests)
