Explicitly specify which llvm-lit to use.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_custom_target(test
 	COMMAND
-		llvm-lit ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
+		${LIT} ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
 		--param=build_dir=${CMAKE_BINARY_DIR}
 		--param=source_dir=${CMAKE_SOURCE_DIR}
 		--param=output_dir=${CMAKE_BINARY_DIR}
