Add more test-running options.
This should, in theory, allow us to run continuous integration tools (e.g. Jenkins) against SOAAP.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,32 @@
+#
+# By default, we don't show details of test failures, but allow this
+# to be overridden.
+#
+set(SHOW_TEST_STATS false CACHE BOOL "Show statistics after running tests")
+
+if (SHOW_TEST_STATS)
+  message(STATUS "Will show statistics after each test run")
+  set(LIT_OPTIONS "-sv")
+else ()
+  message(STATUS "Will run successful tests quietly")
+  set(LIT_OPTIONS "-qv")
+endif ()
+
+
+#
+# If we have David's llvm-lit patch, we can export XUnit-style XML to be
+# read by continuous integration tools like Jenkins.
+#
+set(EXPORT_XUNIT_XML false CACHE BOOL
+    "Export test results as XUnit XML (requires David's lit patches")
+
+if (EXPORT_XUNIT_XML)
+  message(STATUS "Will export test results XUnit XML")
+  set(LIT_EXTRA --junit-xml-output=test-results.xml)
+else ()
+  message(STATUS "Will not export test results XUnit XML")
+endif ()
+
 add_custom_target(test
 	COMMAND
 		${LIT} ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
