--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -34,6 +34,9 @@ if not builddir:
 
 
 extra_cflags = [ '-g' ]     # always build tests with debug symbols
+if 'extra_cflags' in lit_config.params:
+	extra_cflags += lit_config.params['extra_cflags'].split()
+
 extra_cxxflags = [ '-g' ]
 extra_libs = []
 
