Add 'soaap' script.
Instead of 'opt -load libsoaap.so -soaap' (which might actually use libsoaap.dylib on OS X), provide a 'soaap' script that does these things for us.

Use this script in tests.

--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -92,9 +92,11 @@ config.substitutions += [
 
 config.environment['PATH'] = os.path.pathsep.join([
 	llvm_tools,
+	srcdir,
 	config.environment['PATH']
 ])
 
 config.environment['LD_LIBRARY_PATH'] = libdir
+config.environment['DYLD_LIBRARY_PATH'] = libdir
 config.environment['SOAAP_BUILD_DIR'] = builddir
 config.environment['SOAAP_SOURCE_DIR'] = srcdir
