--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_C_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
-set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang++)
+if(NOT DEFINED CMAKE_C_COMPILER)
+	set(CMAKE_C_COMPILER ${LLVM_BINARY_DIR}/bin/clang)
+endif()
+
+if(NOT DEFINED CMAKE_CXX_COMPILER)
+	set(CMAKE_CXX_COMPILER ${LLVM_BINARY_DIR}/bin/clang++)
+endif()
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fno-rtti -Wno-c++11-extensions")
 set(LIT ${LLVM_BINARY_DIR}/bin/llvm-lit)
