Make test CFLAGS separate from normal ones.
On Mac OS X Mavericks, we need to set -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.9.sdk, but only for the tests that we run through SOAAP, not on the SOAAP build itself.

Make this distinction clearer and allow for future C++ tests by using TEST_C_FLAGS instead of CMAKE_C_FLAGS.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -27,13 +27,20 @@ else ()
   message(STATUS "Will not export test results XUnit XML")
 endif ()
 
+
+#
+# Have we set platform-specific CFLAGS for tests?
+#
+if (DEFINED TEST_C_FLAGS)
+	set(LIT_EXTRA ${LIT_EXTRA} --param=extra_cflags=${TEST_C_FLAGS})
+endif ()
+
 add_custom_target(test
 	COMMAND
 		${LIT} ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
 		--param=build_dir=${CMAKE_BINARY_DIR}
 		--param=source_dir=${CMAKE_SOURCE_DIR}
 		--param=output_dir=${CMAKE_BINARY_DIR}
-		--param=extra_cflags=${CMAKE_C_FLAGS}
 		${LIT_EXTRA}
 	COMMENT "Running test suite")
 
