Put test outputs in $build/tests/Output.
We were putting test outputs in $build/Output, which isn't really the right place.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -40,7 +40,7 @@ add_custom_target(test
 		${LIT} ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
 		--param=build_dir=${CMAKE_BINARY_DIR}
 		--param=source_dir=${CMAKE_SOURCE_DIR}
-		--param=output_dir=${CMAKE_BINARY_DIR}
+		--param=output_dir=${CMAKE_CURRENT_BINARY_DIR}
 		${LIT_EXTRA}
 	COMMENT "Running test suite")
 
