Supply llvm-config path to llvm-lit.
This makes it easier to run tests without having to set a PATH: just use the LLVM_BINARY_DIR that is cached in the CMake-generated build files.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -37,7 +37,8 @@ endif ()
 
 add_custom_target(test
 	COMMAND
-		${LIT} ${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
+		PATH=${LLVM_BINARY_DIR}:$ENV{PATH} ${LIT}
+		${LIT_OPTIONS} ${CMAKE_CURRENT_SOURCE_DIR}
 		--param=build_dir=${CMAKE_BINARY_DIR}
 		--param=source_dir=${CMAKE_SOURCE_DIR}
 		--param=output_dir=${CMAKE_CURRENT_BINARY_DIR}
