--- a/SoaapPass/CMakeLists.txt
+++ b/SoaapPass/CMakeLists.txt
@@ -34,7 +34,10 @@ add_llvm_loadable_module(libdotdyncg
 )
 
 # pass to instrument dynamic call edge profiling
-add_llvm_loadable_module(libcep CallEdgeProfiling.cpp CallEdgeProfiling.c)
+add_llvm_loadable_module(libcep
+  Passes/CallEdgeProfiling.cpp
+  Passes/CallEdgeProfiling.c
+)
 link_directories(${LLVM_BINARY_DIR}/lib)
 add_library(cep_rt SHARED Passes/CallEdgeProfiling.c)
 target_link_libraries(cep_rt profile_rt)
