Fix path to soaap's bin directory for tests

--- a/tests/lit.cfg
+++ b/tests/lit.cfg
@@ -90,9 +90,11 @@ config.substitutions += [
 	('%cpp_out', support.cpp_out()),
 ]
 
+soaap_bin = os.path.join(srcdir, 'bin')
+
 config.environment['PATH'] = os.path.pathsep.join([
 	llvm_tools,
-	srcdir,
+	soaap_bin,
 	config.environment['PATH']
 ])
 
