Tweaks to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-find_package(LLVM REQUIRED)
-
-include(AddLLVM)
-add_definitions(${LLVM_DEFINITIONS})
-
 if(NOT CMAKE_LLVM_CONFIG)
   set(CMAKE_LLVM_CONFIG llvm-config)
 endif()
@@ -17,15 +12,22 @@ endif()
 
 exec_program(${CMAKE_LLVM_CONFIG} ARGS --includedir OUTPUT_VARIABLE LLVM_INCDIR)
 exec_program(${CMAKE_LLVM_CONFIG} ARGS --libdir   OUTPUT_VARIABLE LLVM_LIBDIR)
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --src-root OUTPUT_VARIABLE LLVM_SRC)
-exec_program(${CMAKE_LLVM_CONFIG} ARGS --obj-root OUTPUT_VARIABLE LLVM_OBJ)
+exec_program(${CMAKE_LLVM_CONFIG} ARGS --src-root OUTPUT_VARIABLE LLVM_SRCDIR)
+exec_program(${CMAKE_LLVM_CONFIG} ARGS --obj-root OUTPUT_VARIABLE LLVM_OBJDIR)
+
+set(CMAKE_MODULE_PATH "${LLVM_SRCDIR}/cmake/modules")
+
+find_package(LLVM REQUIRED)
+
+include(AddLLVM)
+add_definitions(${LLVM_DEFINITIONS})
 
 if(NOT DEFINED CMAKE_C_COMPILER)
-	set(CMAKE_C_COMPILER ${LLVM_OBJ}/bin/clang)
+	set(CMAKE_C_COMPILER ${LLVM_OBJDIR}/bin/clang)
 endif()
 
 if(NOT DEFINED CMAKE_CXX_COMPILER)
-	set(CMAKE_CXX_COMPILER ${LLVM_OBJ}/bin/clang++)
+	set(CMAKE_CXX_COMPILER ${LLVM_OBJDIR}/bin/clang++)
 endif()
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fPIC")
@@ -38,9 +40,9 @@ set(LLVM_LIBRARY_OUTPUT_INTDIR ${PROJECT_BINARY_DIR})
 set(LIT ${LLVM_OBJ}/bin/llvm-lit CACHE FILE "Location of llvm-lit")
 
 include_directories(${LLVM_INCDIR})
-include_directories(${LLVM_SRC}/lib)
-include_directories(${LLVM_SRC}/runtime/libprofile)
-include_directories(${LLVM_OBJ}/include)
+include_directories(${LLVM_SRCDIR}/lib)
+include_directories(${LLVM_SRCDIR}/runtime/libprofile)
+include_directories(${LLVM_OBJDIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/soaap)
 link_directories(${LLVM_LIBDIR})
