Update CMakeLists to use cmake files from llvm's object directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ exec_program(${CMAKE_LLVM_CONFIG} ARGS --libdir   OUTPUT_VARIABLE LLVM_LIBDIR)
 exec_program(${CMAKE_LLVM_CONFIG} ARGS --src-root OUTPUT_VARIABLE LLVM_SRCDIR)
 exec_program(${CMAKE_LLVM_CONFIG} ARGS --obj-root OUTPUT_VARIABLE LLVM_OBJDIR)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_OBJDIR}/cmake/modules" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_OBJDIR}/share/llvm/cmake" "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 
 find_package(LLVM REQUIRED)
 
